# lighthill

./: .gitignore  .pre-commit-config.yaml  DECISIONS.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  pr-title-lint.yml  release.yml
.superpowers/sdd/: task-4-report.md
docs/: isaac-api-findings.md  paper-notes.md  plan-b-handoff.md
docs/design/: 2026-06-28-hydrodynamics-design.md
docs/plans/: 2026-06-29-plan-a-physics-core.md  2026-06-29-plan-b-isaac-integration.md
sim_validation/: README.md  __init__.py  arm_swing_reaction.py  arm_swing_referee.py  coast_test.py  compare_coupled_references.py  convergence_study.py  drag_terminal.py  free_decay.py  freejoint_test.py  maximal_coupling_test.py  mjwarp_coupling_test.py  mujoco_coupling_test.py  newton_coupling_gate.py  newton_hydro_test.py  newton_probe.py  newton_smoke.py  reference_featherstone.md  restoring.py
sim_validation/docker/: Dockerfile.isaaclab-newton  Dockerfile.mjwarp
src/lighthill/: __init__.py  accel.py  apply.py  apply_isaac.py  apply_newton.py  articulation.py  coefficients.py  config.py  constants.py  current.py  forces.py  frames.py  inertia.py
src/lighthill/configs/: __init__.py  bluerov2_alpha_uvms.yaml  bluerov2_auv.yaml
src/lighthill/validation/: __init__.py  reference.py  reference_coupled.py  reference_coupled_addedmass.py  reference_planar_momentum.py
tests/: test_accel.py  test_apply.py  test_apply_isaac_marker.py  test_articulation_fake.py  test_coefficients.py  test_config.py  test_coriolis_vs_fossen.py  test_current.py  test_example_configs.py  test_forces_addedmass.py  test_forces_buoyancy_drag.py  test_frames.py  test_inertia.py  test_reference_coupled.py  test_reference_coupled_addedmass.py  test_reference_planar_momentum.py  test_routing_closed_form.py  test_smoke.py  test_validation.py
